--- a/proyectos.html
+++ b/proyectos.html
@@ -8,10 +8,10 @@
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.21.0/dist/tf.min.js"></script>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100">
+<body class="bg-gray-100 dark:bg-gray-900 text-gray-800 dark:text-gray-100">
 
   <!-- Contenido -->
-  <div class="max-w-2xl mx-auto p-4 text-gray-800">
+  <div class="max-w-2xl mx-auto p-4">
     <h1 class="text-xl md:text-2xl font-bold mb-4">
       Red Neuronal para el Cálculo de Funciones Trigonométricas
     </h1>
@@ -25,7 +25,7 @@
 
   <!-- Botón de reinicio -->
   <div class="max-w-2xl mx-auto text-center my-4">
-    <button id="resetBtn" class="bg-red-600 text-white px-4 py-2 rounded hover:bg-red-700 transition">
+    <button id="resetBtn" class="bg-red-600 text-white px-4 py-2 rounded hover:bg-red-700 dark:hover:bg-red-500 transition">
       🔄 Reiniciar Modelo
     </button>
   </div>
@@ -117,10 +117,12 @@ function draw() {
 
   if (loadingModel) {
     push();
+    textSize(26 * textScale);
+    fill(255, 0, 0); // Rojo fuerte
+    textStyle(BOLD);
     textAlign(CENTER, CENTER);
-    textSize(22 * textScale);
-    fill(80);
-    text("La red se está entrenando\n y podría tardar entre 1 y 2 minutos", width / 2, height / 2);
+    text("⚠️ Entrenando red neuronal...\nEsto puede tardar 1-2 minutos", width / 2, height / 2);
+    textStyle(NORMAL);
     pop();
     return;
   }
@@ -186,7 +188,6 @@ function windowResized() {
   resizeCanvas(canvasSize, canvasSize);
 }
 
-// Botón para reiniciar el modelo
 document.getElementById('resetBtn').addEventListener('click', async () => {
   if (confirm('¿Estás seguro de que deseas reiniciar el modelo? Esto eliminará el modelo actual.')) {
     localStorage.removeItem('tensorflowjs_models/mi-modelo/info');
