--- a/proyectos.html
+++ b/proyectos.html
@@ -16,8 +16,8 @@
       Red Neuronal para el Cálculo de Funciones Trigonométricas
     </h1>
     <p class="text-sm md:text-base mb-2 leading-snug">
-      En este proyecto usamos redes neuronales para que la web aprenda a calcular valores trigonométricos. No usamos una calculadora tradicional, sino un modelo que aprende de datos. Por eso puede haber pequeñas diferencias mientras se entrena. Por ejemplo, el seno de 90 es 1, pero el modelo podría predecir algo como 0.95.
-    </p>
+    en este proyecto no se usaron calculos matematicos o calculadoras tradicionales para realizar operaciones trigonometricas , por el contrario se utilizaron datos y para dar un entendimiento mejor se le enseño a la Web a realizar estos calculos , lo que vemos no lo podriamos definir como un calculo matematico si no tal vez como una prediccion basado en lo que se le enseño , este tipo de programacion con redes neuronales nos abre un camino sin fin en lo que podemos llegar a hacer a partir de redes neuronales bien entrenadas.
+   </p>
     <p class="text-sm md:text-base font-bold">
       Desarrollado por: Robinson López
     </p>
