--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <title>soluciones tecnologicas</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/p5.js"></script>
-  <script src="sketch.js"></script>
+  <script src="sketch.js?v=1.0"></script>
+
   <style>
     body, html {
       margin: 0;
