--- a/chess.html
+++ b/chess.html
@@ -1,44 +1,107 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
 <head>
   <meta charset="UTF-8">
-  <title>ejemplo de uso de matrices</title>
+  <title>Ajedrez con Stockfish</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chessboard-js/1.0.0/css/chessboard.min.css" />
   <style>
     body {
-      margin: 0;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-      align-items: start;
-      height: 100vh;
-      background: #f0f0f0;
-      font-family: sans-serif;
-    }
-
-    main {
-      margin-top: 20px;
-      transform: scale(1);
-      transform-origin: top center;
-    }
-
-    @media (max-width: 480px) {
-      main {
-        transform: scale(0.9);
-      }
-    }
-
-    canvas {
-      display: block;
+      font-family: Arial, sans-serif;
+      max-width: 800px;
       margin: 0 auto;
+      padding: 20px;
+    }
+    #board {
+      width: 400px;
+      margin: 20px auto;
+    }
+    #status {
+      text-align: center;
+      font-size: 18px;
+      margin-top: 10px;
+    }
+    .descripcion {
+      background-color: #f5f5f5;
+      border-left: 5px solid #ccc;
+      padding: 15px;
+      margin-bottom: 20px;
+      line-height: 1.6;
     }
   </style>
 </head>
 <body>
-  <main>
-    <!-- Aquí se inserta el canvas de p5.js automáticamente -->
-  </main>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js"></script>
-  <script src="chess.js"></script>
+  <div class="descripcion">
+    <p>
+      Existen redes neuronales y motores de ajedrez ya entrenados que están disponibles en línea. Estos motores han sido desarrollados y afinados durante años, y pueden ser reutilizados en nuestros propios proyectos gracias a que muchos son de código abierto y están accesibles desde la web.
+    </p>
+    <p>
+      En este caso, utilizamos un motor de ajedrez ya entrenado llamado <strong>Stockfish</strong>, uno de los más potentes del mundo. Optamos por usar un motor ya entrenado porque crear y entrenar una red neuronal que comprenda bien el ajedrez requeriría una enorme cantidad de tiempo, datos y poder computacional.
+    </p>
+    <p>
+      El motor que usamos ha sido entrenado utilizando más de 10.000 partidas de ajedrez reales, jugadas por expertos y grandes maestros. Gracias a eso, el modelo ha aprendido a evaluar millones de posiciones distintas y a predecir cuál es la mejor jugada en una situación dada. Cuando haces una jugada en el tablero, el motor analiza la posición actual y predice la mejor respuesta basándose en todo ese conocimiento acumulado.
+    </p>
+  </div>
+
+  <div id="board"></div>
+  <div id="status">Tu turno (Blancas)</div>
+
+  <!-- Librerías -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.3/chess.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/chessboard-js/1.0.0/js/chessboard.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/stockfish@15.1.0/stockfish.min.js"></script>
+
+  <script>
+    const board = Chessboard('board', {
+      draggable: true,
+      position: 'start',
+      onDrop: onDrop
+    });
+
+    const game = new Chess();
+    const engine = Stockfish();
+
+    engine.onmessage = function (event) {
+      const line = typeof event === "object" ? event.data : event;
+      if (line.startsWith("bestmove")) {
+        const move = line.split(" ")[1];
+        game.move({ from: move.substring(0, 2), to: move.substring(2, 4), promotion: 'q' });
+        board.position(game.fen());
+        updateStatus();
+      }
+    };
+
+    function onDrop(source, target) {
+      const move = game.move({
+        from: source,
+        to: target,
+        promotion: 'q'
+      });
+
+      if (move === null) return 'snapback';
+
+      board.position(game.fen());
+      updateStatus();
+
+      // Esperar y dejar que Stockfish juegue
+      setTimeout(makeEngineMove, 250);
+    }
+
+    function makeEngineMove() {
+      engine.postMessage("position fen " + game.fen());
+      engine.postMessage("go depth 15");
+    }
+
+    function updateStatus() {
+      const statusEl = document.getElementById("status");
+      if (game.in_checkmate()) {
+        statusEl.textContent = '¡Jaque mate!';
+      } else if (game.in_draw()) {
+        statusEl.textContent = '¡Empate!';
+      } else {
+        statusEl.textContent = game.turn() === 'w' ? 'Tu turno (Blancas)' : 'Pensando...';
+      }
+    }
+  </script>
 </body>
 </html>
