--- a/ajedrez.html
+++ b/ajedrez.html
@@ -7,61 +7,55 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chessboard-js/1.0.0/css/chessboard.min.css" />
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #f0f2f5;
+      font-family: Arial, sans-serif;
+      background-color: #f3f3f3;
       padding: 20px;
       text-align: center;
-      color: #333;
     }
 
     .descripcion {
-      background-color: #ffffff;
-      border-left: 5px solid #4CAF50;
-      padding: 20px;
-      margin-bottom: 30px;
       max-width: 800px;
       margin: auto;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      background: white;
+      padding: 20px;
+      border-left: 6px solid #4CAF50;
       border-radius: 8px;
-      line-height: 1.6;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
       text-align: left;
     }
 
+    #board {
+      width: 400px;
+      margin: 30px auto;
+    }
+
+    #status {
+      font-size: 18px;
+      margin-top: 10px;
+      padding: 10px 20px;
+      background: white;
+      display: inline-block;
+      border-radius: 8px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+
     #controls {
-      margin: 20px auto;
-      display: flex;
-      gap: 10px;
-      justify-content: center;
-      flex-wrap: wrap;
+      margin-top: 20px;
     }
 
     button {
+      padding: 10px 15px;
+      margin: 5px;
+      font-size: 16px;
       background-color: #4CAF50;
       color: white;
       border: none;
-      padding: 10px 20px;
       border-radius: 6px;
       cursor: pointer;
-      font-size: 16px;
     }
 
     button:hover {
       background-color: #45a049;
-    }
-
-    #board {
-      max-width: 400px;
-      margin: 0 auto;
-    }
-
-    #status {
-      margin-top: 15px;
-      font-size: 18px;
-      background: #fff;
-      padding: 10px;
-      border-radius: 8px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-      display: inline-block;
     }
   </style>
 </head>
@@ -134,7 +128,7 @@
       board.position(game.fen());
       updateStatus();
 
-      setTimeout(makeEngineMove, 250);
+      setTimeout(makeEngineMove, 300);
     }
 
     function makeEngineMove() {
@@ -156,11 +150,10 @@
     function startNewGame(color) {
       playerColor = color;
       game = new Chess();
-      document.getElementById('board').innerHTML = ''; // Limpia tablero viejo
       initBoard();
       updateStatus();
       if (playerColor === 'b') {
-        setTimeout(makeEngineMove, 500); // Stockfish juega primero
+        setTimeout(makeEngineMove, 500);
       }
     }
 
@@ -168,10 +161,8 @@
       startNewGame(playerColor);
     }
 
-    // Iniciar partida por defecto
     window.onload = function () {
-      initBoard();
-      updateStatus();
+      startNewGame('w');
     };
   </script>
 </body>
