--- a/ajedrez.html
+++ b/ajedrez.html
@@ -2,104 +2,143 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ajedrez con Stockfish</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chessboard-js/1.0.0/css/chessboard.min.css" />
+  <title>motores neuronales</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #f3f3f3;
-      padding: 20px;
-      text-align: center;
+      font-family: sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-top: 30px;
     }
 
     .descripcion {
-      max-width: 800px;
-      margin: auto;
-      background: white;
-      padding: 20px;
-      border-left: 6px solid #4CAF50;
-      border-radius: 8px;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-      text-align: left;
+      max-width: 600px;
+      margin-bottom: 20px;
     }
 
     #board {
-      width: 400px;
-      margin: 30px auto;
+      display: grid;
+      grid-template-columns: repeat(8, 60px);
+      grid-template-rows: repeat(8, 60px);
+      border: 2px solid #333;
+    }
+
+    .square {
+      width: 60px;
+      height: 60px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 32px;
+      cursor: pointer;
+      user-select: none;
+    }
+
+    .white {
+      background-color: #f0d9b5;
+    }
+
+    .black {
+      background-color: #b58863;
     }
 
     #status {
+      margin-top: 15px;
       font-size: 18px;
-      margin-top: 10px;
-      padding: 10px 20px;
-      background: white;
-      display: inline-block;
-      border-radius: 8px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
-
-    #controls {
-      margin-top: 20px;
     }
 
     button {
-      padding: 10px 15px;
-      margin: 5px;
-      font-size: 16px;
-      background-color: #4CAF50;
-      color: white;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-    }
-
-    button:hover {
-      background-color: #45a049;
+      margin: 10px;
+      padding: 8px 16px;
     }
   </style>
 </head>
 <body>
 
   <div class="descripcion">
-    <p>
-      Existen redes neuronales y motores de ajedrez ya entrenados que están disponibles en línea. Estos motores han sido desarrollados y afinados durante años, y pueden ser reutilizados en nuestros propios proyectos gracias a que muchos son de código abierto y están accesibles desde la web.
-    </p>
-    <p>
-      En este caso, utilizamos un motor de ajedrez ya entrenado llamado <strong>Stockfish</strong>, uno de los más potentes del mundo. Optamos por usar un motor ya entrenado porque crear y entrenar una red neuronal que comprenda bien el ajedrez requeriría una enorme cantidad de tiempo, datos y poder computacional.
-    </p>
-    <p>
-      El motor que usamos ha sido entrenado utilizando más de 10.000 partidas de ajedrez reales, jugadas por expertos y grandes maestros. Gracias a eso, el modelo ha aprendido a evaluar millones de posiciones distintas y a predecir cuál es la mejor jugada en una situación dada.
-    </p>
-  </div>
-
-  <div id="controls">
-    <button onclick="startNewGame('w')">Jugar como Blancas</button>
-    <button onclick="startNewGame('b')">Jugar como Negras</button>
-    <button onclick="resetGame()">Reiniciar</button>
+    <p>Existen redes neuronales y motores de ajedrez ya entrenados que están disponibles en línea. Estos motores han sido desarrollados y afinados durante años, y pueden ser reutilizados en nuestros propios proyectos gracias a que muchos son de código abierto y están accesibles desde la web.</p>
+    <p>En este caso, utilizamos un motor de ajedrez ya entrenado llamado <strong>Stockfish</strong>, uno de los más potentes del mundo. Optamos por usar un motor ya entrenado porque crear y entrenar una red neuronal que comprenda bien el ajedrez requeriría una enorme cantidad de tiempo, datos y poder computacional.</p>
+    <p>El motor que usamos ha sido entrenado utilizando más de 10.000 partidas de ajedrez reales, jugadas por expertos y grandes maestros. Gracias a eso, el modelo ha aprendido a evaluar millones de posiciones distintas y a predecir cuál es la mejor jugada en una situación dada.</p>
   </div>
 
   <div id="board"></div>
   <div id="status">Tu turno (Blancas)</div>
 
-  <!-- Librerías necesarias -->
+  <!-- Dependencias -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.3/chess.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/chessboard-js/1.0.0/js/chessboard.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/stockfish@15.1.0/stockfish.min.js"></script>
 
   <script>
-    let board = null;
-    let game = new Chess();
-    let engine = Stockfish();
-    let playerColor = 'w';
+    const boardElement = document.getElementById('board');
+    const statusElement = document.getElementById('status');
+    const game = new Chess();
+    const engine = Stockfish();
+    let selectedSquare = null;
 
-    function initBoard() {
-      board = Chessboard(document.getElementById('board'), {
-        draggable: true,
-        position: 'start',
-        orientation: playerColor === 'w' ? 'white' : 'black',
-        onDrop: onDrop
-      });
+    const unicodePieces = {
+      p: '♟', r: '♜', n: '♞', b: '♝', q: '♛', k: '♚',
+      P: '♙', R: '♖', N: '♘', B: '♗', Q: '♕', K: '♔'
+    };
+
+    function renderBoard() {
+      boardElement.innerHTML = '';
+      const board = game.board();
+      for (let row = 7; row >= 0; row--) {
+        for (let col = 0; col < 8; col++) {
+          const squareColor = (row + col) % 2 === 0 ? 'white' : 'black';
+          const square = document.createElement('div');
+          square.classList.add('square', squareColor);
+          square.dataset.square = 'abcdefgh'[col] + (row + 1);
+          const piece = board[row][col];
+          if (piece) {
+            square.textContent = unicodePieces[piece.color === 'w' ? piece.type.toUpperCase() : piece.type];
+          }
+          square.addEventListener('click', onSquareClick);
+          boardElement.appendChild(square);
+        }
+      }
+    }
+
+    function onSquareClick(e) {
+      const square = e.currentTarget.dataset.square;
+      if (!selectedSquare) {
+        selectedSquare = square;
+        e.currentTarget.style.outline = '2px solid red';
+      } else {
+        const move = game.move({
+          from: selectedSquare,
+          to: square,
+          promotion: 'q'
+        });
+
+        clearSelection();
+
+        if (move === null) return;
+        renderBoard();
+        updateStatus();
+        setTimeout(engineMove, 300);
+      }
+    }
+
+    function clearSelection() {
+      selectedSquare = null;
+      document.querySelectorAll('.square').forEach(sq => sq.style.outline = 'none');
+    }
+
+    function updateStatus() {
+      if (game.in_checkmate()) {
+        statusElement.textContent = '¡Jaque mate!';
+      } else if (game.in_draw()) {
+        statusElement.textContent = '¡Empate!';
+      } else {
+        statusElement.textContent = game.turn() === 'w' ? 'Tu turno (Blancas)' : 'Pensando...';
+      }
+    }
+
+    function engineMove() {
+      engine.postMessage("position fen " + game.fen());
+      engine.postMessage("go depth 15");
     }
 
     engine.onmessage = function (event) {
@@ -107,63 +146,19 @@
       if (line.startsWith("bestmove")) {
         const move = line.split(" ")[1];
         if (move) {
-          game.move({ from: move.substring(0, 2), to: move.substring(2, 4), promotion: 'q' });
-          board.position(game.fen());
+          game.move({
+            from: move.substring(0, 2),
+            to: move.substring(2, 4),
+            promotion: 'q'
+          });
+          renderBoard();
           updateStatus();
         }
       }
     };
 
-    function onDrop(source, target) {
-      if (game.turn() !== playerColor) return 'snapback';
-
-      const move = game.move({
-        from: source,
-        to: target,
-        promotion: 'q'
-      });
-
-      if (move === null) return 'snapback';
-
-      board.position(game.fen());
-      updateStatus();
-
-      setTimeout(makeEngineMove, 300);
-    }
-
-    function makeEngineMove() {
-      engine.postMessage("position fen " + game.fen());
-      engine.postMessage("go depth 15");
-    }
-
-    function updateStatus() {
-      const statusEl = document.getElementById("status");
-      if (game.in_checkmate()) {
-        statusEl.textContent = '¡Jaque mate!';
-      } else if (game.in_draw()) {
-        statusEl.textContent = '¡Empate!';
-      } else {
-        statusEl.textContent = game.turn() === playerColor ? 'Tu turno' : 'Pensando...';
-      }
-    }
-
-    function startNewGame(color) {
-      playerColor = color;
-      game = new Chess();
-      initBoard();
-      updateStatus();
-      if (playerColor === 'b') {
-        setTimeout(makeEngineMove, 500);
-      }
-    }
-
-    function resetGame() {
-      startNewGame(playerColor);
-    }
-
-    window.onload = function () {
-      startNewGame('w');
-    };
+    renderBoard();
+    updateStatus();
   </script>
 </body>
 </html>
